--- a/src/app/modules/carWashes/components/detailes/view/index.html
+++ b/src/app/modules/carWashes/components/detailes/view/index.html
@@ -87,3 +87,11 @@
     (mapObject)="getMapObject($event)"
   ></google-maps>
 </div>
+
+<button
+  color="accent"
+  mat-raised-button
+  (click)="getOwnLocation($event)"
+>
+  Get Current Location
+</button>
