--- a/src/app/modules/login/view/index.html
+++ b/src/app/modules/login/view/index.html
@@ -18,6 +18,7 @@
         <mat-form-field>
           <input
             matInput
+            type="password"
             placeholder="Password"
             class="input form-control rounded"
             [(ngModel)]="user.password"
