carWashes/gmaps get current location

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -206,6 +206,10 @@ body {
   margin-buttom: 20px;
 }
 
+.margin-all {
+  margin: 20px !important;
+}
+
 .padding-left {
   padding-left: 20px;
 }
@@ -220,6 +224,10 @@ body {
 
 .padding-buttom {
   padding-buttom: 20px;
+}
+
+.padding-all {
+  padding: 20px;
 }
 
 .no-padding {
