--- a/src/app/modules/carWashes/components/detailes/view/index.html
+++ b/src/app/modules/carWashes/components/detailes/view/index.html
@@ -91,6 +91,7 @@
 <button
   color="accent"
   mat-raised-button
+  class="margin-all"
   (click)="getOwnLocation($event)"
 >
   Get Current Location
